# pilgrimor

./: .env  .flake8  README.md  pyproject.toml
migrations/: 0_20211004124332_init.sql
pilgrimor/: __init__.py  __main__.py  exceptions.py  settings.py  utils.py
pilgrimor/.github/workflows/: release.yml
pilgrimor/abc/: __init__.py  engine.py  migration.py  migrator.py
pilgrimor/abc/engine/: __init__.py  engine.py
pilgrimor/cli/: __init__.py  base_cli.py  cli.py  parser.py  rawsql_cli.py
pilgrimor/engine/: __init__.py  engine.py  postgresql_engine.py
pilgrimor/migrations/: __init__.py  table.py
pilgrimor/migrator/: __init__.py
pilgrimor/migrator/python_migrator/: __init__.py
pilgrimor/migrator/rawsql_migrator/: __init__.py  rawsql_migrator.py
tests/: __init__.py  test_pilgrimor.py
