[tool.poetry]
name = "pilgrimor"
version = "0.1.0"
description = ""
authors = ["Kiselev Aleksandr <askiselev00@gmail.com>"]
maintainers = ["Pavel Kirilin <win10@list.ru>"]
readme = "README.md"
repository = "https://github.com/pilgrimor/pilgrimor"
homepage = "https://github.com/pilgrimor/pilgrimor"
documentation = "https://github.com/pilgrimor/pilgrimor"
license = "LICENSE"
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Development Status :: 3 - Alpha",
]
keywords = ["pilgrimor", "migartions"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
tomlkit = "^0.11.1"
python-dotenv = "^0.20.0"
importlib-metadata = "^4.12.0"
psycopg = "^3.1.4"
psycopg-c = "^3.1.4"
psycopg-binary = "^3.1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^4.0.1"
mypy = "^0.961"
isort = "^5.10.1"
yesqa = "^1.3.0"
pre-commit = "^2.19.0"
wemake-python-styleguide = "^0.16.1"
black = "^22.3.0"
autoflake = "^1.4"
pytest-cov = "^3.0.0"
anyio = "^3.6.1"
pytest-env = "^0.6.2"
pytest-mock = "^3.8.2"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["pilgrimor",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pilgrimor]
migrations_dir = "./migrations/"
database_engine = "PSQL"
env_file = "./.env"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pilgrimor = "pilgrimor.__main__:main"